# play-rust

./: .gitignore  README.md
aes/: Cargo.toml
aes/src/: main.rs
alloc/: Cargo.toml
alloc/src/: main.rs
crash/: Cargo.toml
crash/src/: main.rs
deref/: Cargo.toml
deref/src/: main.rs
doc_test/: Cargo.toml
doc_test/src/: lib.rs
fern-sim/: Cargo.toml
fern-sim/src/: lib.rs
fibonacci/: Cargo.toml  README.md
fibonacci/src/: main.rs
format/: Cargo.toml
format/src/: main.rs
gcd/: Cargo.toml
gcd/src/: main.rs
git-toy/: Cargo.toml  build.rs
git-toy/src/: main.rs  raw.rs
git-toy/src/git/: mod.rs
grep/: Cargo.toml
grep/src/: main.rs
hash/: Cargo.toml
hash/src/: main.rs
helloc/: Cargo.toml  build.rs
helloc/src/: hello.c  main.rs
iron-gcd/: Cargo.toml
iron-gcd/src/: main.rs
iterator/: Cargo.toml
iterator/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
trait-bound/: Cargo.toml
trait-bound/src/: main.rs
unsaf/: Cargo.toml
unsaf/src/: main.rs
