[package]
name = "fern_sim"
version = "0.1.0"
authors = ["JustinZhang <schnell18@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Fern simulation, from the cellular level up.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
