[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["JustinZhang <schnell18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "0.4"
num_cpus = "1.0"
num = "0.1.27"
image = "0.13.0"

[profile.release]
debug = true